# avm

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: install.rs  lib.rs  remote.rs
